--- a/css/style-account.css
+++ b/css/style-account.css
@@ -833,8 +833,11 @@ body {
         padding-left: 150px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 150px;
+    .header-line3-new {
+        margin: 10px 40px 10px 150px;
+    }
+    .category {
+        margin-left: 150px;
     }
     
     .header-line3-a1 {
@@ -905,8 +908,17 @@ body {
         margin-left: 100px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 100px;
+    .header-line3-new {
+        margin: 10px 40px 10px 100px;
+        width: 140px;
+    }
+    .header-line3-p {
+        font-size: 12px;
+        margin-left: 2px;
+        margin-top: 1px;
+    }
+    .category {
+        margin-left: 100px;
     }
     
     .bottom1 {
@@ -960,10 +972,12 @@ body {
         padding-left: 80px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 80px;
+    .header-line3-new {
+        margin: 10px 40px 10px 80px;
     }
-    
+    .category {
+        margin-left: 80px;
+    }
     .bottom1 {
         margin-left: 80px;
     }
@@ -991,8 +1005,11 @@ body {
         padding-left: 55px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 55px;
+    .header-line3-new {
+        margin: 10px 40px 10px 55px;
+    }
+    .category {
+        margin-left: 55px;
     }
     
     .bottom1 {
@@ -1074,8 +1091,11 @@ body {
         padding-left: 50px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 50px;
+    .header-line3-new {
+        margin: 10px 40px 10px 50px;
+    }
+    .category {
+        margin-left: 50px;
     }
 
     .bottom1 {
