--- a/css/style-basket.css
+++ b/css/style-basket.css
@@ -761,8 +761,11 @@ body {
         padding-left: 150px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 150px;
+    .header-line3-new {
+        margin: 10px 40px 10px 150px;
+    }
+    .category {
+        margin-left: 150px;
     }
     
     .cart-left {
@@ -814,10 +817,18 @@ body {
         padding-left: 100px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 100px;
+    .header-line3-new {
+        margin: 10px 40px 10px 100px;
+        width: 140px;
     }
-    
+    .header-line3-p {
+        font-size: 12px;
+        margin-left: 2px;
+        margin-top: 1px;
+    }
+    .category {
+        margin-left: 100px;
+    }
     .cart-left {
         margin-left: 100px;
     }
@@ -887,8 +898,11 @@ body {
         padding-left: 80px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 80px;
+    .header-line3-new {
+        margin: 10px 40px 10px 80px;
+    }
+    .category {
+        margin-left: 80px;
     }
     
     .cart-left {
@@ -969,8 +983,11 @@ body {
         padding-left: 55px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 55px;
+    .header-line3-new {
+        margin: 10px 40px 10px 55px;
+    }
+    .category {
+        margin-left: 55px;
     }
     
     .cart-left {
@@ -1019,8 +1036,11 @@ body {
         padding-left: 50px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 50px;
+    .header-line3-new {
+        margin: 10px 40px 10px 50px;
+    }
+    .category {
+        margin-left: 50px;
     }
     
     .cart-left {
