--- a/css/style-account-registration.css
+++ b/css/style-account-registration.css
@@ -568,8 +568,11 @@ body {
         padding-left: 150px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 150px;
+    .header-line3-new {
+        margin: 10px 40px 10px 150px;
+    }
+    .category {
+        margin-left: 150px;
     }
     
     .header-line3-a1 {
@@ -619,10 +622,18 @@ body {
         padding-left: 100px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 100px;
+    .header-line3-new {
+        margin: 10px 40px 10px 100px;
+        width: 140px;
     }
-    
+    .header-line3-p {
+        font-size: 12px;
+        margin-left: 2px;
+        margin-top: 1px;
+    }
+    .category {
+        margin-left: 100px;
+    }
     .bottom1 {
         margin-left: 100px;
     }
@@ -649,8 +660,11 @@ body {
         padding-left: 80px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 80px;
+    .header-line3-new {
+        margin: 10px 40px 10px 80px;
+    }
+    .category {
+        margin-left: 80px;
     }
     
     .bottom1 {
@@ -680,8 +694,11 @@ body {
         padding-left: 55px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 55px;
+    .header-line3-new {
+        margin: 10px 40px 10px 55px;
+    }
+    .category {
+        margin-left: 55px;
     }
     
     .bottom1 {
@@ -722,9 +739,11 @@ body {
     .header-line2 {
         padding-left: 50px;
     }
-
-    .header-line3-select {
-        margin: 10px 10px 10px 50px;
+    .header-line3-new {
+        margin: 10px 40px 10px 50px;
+    }
+    .category {
+        margin-left: 50px;
     }
 
     .bottom1 {
