--- a/style-tovar.css
+++ b/style-tovar.css
@@ -2,13 +2,12 @@
     display: flex;
     flex-direction: column;
     margin-top: 15px;
-    
 }
 
 .container-img1{
     display: flex;
     flex-direction: line;
-    margin-left: 200px;
+    margin-left: 150px;
     margin-top: 50px;
 }
 
@@ -32,7 +31,7 @@
 }
 
 .container-imgsmall{
-    margin-left: 50px;
+    margin-left: 20px;
     display: flex;
     flex-direction: line;
 }
@@ -49,8 +48,6 @@
 .header-line3-img8{
     width: 96px;
     height: 98px;
-    
-
 }
 
 .header-line3-img9{
@@ -110,4 +107,244 @@ button10 {
 p10{
     margin-right: 20px;
     margin-left: 20px;
+}
+
+.container-button_kup{
+    display: flex;
+    flex-direction: line;
+    margin-top: 15px;
+}
+
+.container-button-in-kup{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    margin-left: 20px;
+}
+
+button15{
+    color:#000000;
+    display: flex;
+    flex-direction: column;
+    border: 2.5px solid #929FA5;
+    border-radius: 12px;
+    text-size-adjust: 14px;
+    letter-spacing: 1.2%;
+    margin-top: 10px;
+    margin-right: 15px;
+}
+
+.container-color2{
+    display: flex;
+    flex-direction: column;
+}
+
+p15{
+    color: #000000;
+    margin-left: 15px;
+    font-size: 30px;
+    margin-top: 15px;
+}
+
+p17{
+    color: #929FA5;
+    margin-left: 10px;
+    font-size: 26px;
+    margin-left: 25px;
+}
+
+.container-button-in-kup3{
+    display: flex;
+    flex-direction: line;
+}
+
+.container-box{
+    margin-left: 15px;
+}
+
+.img-box{
+    height: 20px;
+    width: 20px;
+    margin-top: 9px;
+}
+
+.container-button-in-kup2{
+    display: flex;
+    flex-direction: line;
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
+button17 {
+    border-radius: 12px;
+    text-size-adjust: 14px;
+    line-height: 46px;
+    letter-spacing: 2%;
+    margin-top: 15px;
+    margin-right: 15px;
+}
+
+.container-button-in-kup-mini{
+    display: flex;
+    flex-direction: column;
+    margin-top: 1px;
+    margin-left: -15px;
+}
+
+button20{
+    color:#000000;
+    display: flex;
+    flex-direction: column;
+    border: 2.5px solid #EBC80C;
+    border-radius: 12px;
+    text-size-adjust: 14px;
+    letter-spacing: 1.2%;
+    margin-top: 10px;
+    margin-right: 15px;
+    width: 380px;
+}
+
+.img-tsk{
+    height: 3px;
+    width: 3px;
+    margin-top: 50px;
+}
+
+p23{
+    color: #000000;
+    margin-left: 260px;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.img-dif{
+    width: 130px;
+    height: 160px;
+    margin-right: 70px;
+}
+
+.container-dif{
+    display: flex;
+    flex-direction: line;
+    margin-bottom: 70px;
+    margin-right: 10px;
+    margin-left: 260px;
+}
+
+p24{
+    color: #000000;
+    margin-left: 260px;
+    font-size: 16px;
+    margin-bottom: 35px;
+    width: 870px;
+    text-align: justify;
+}
+
+.img-harakt{
+    width: 870px;
+    height: 700px;
+    margin-right: 70px;
+    margin-left: 250px;
+}
+
+.img-harakt2{
+    width: 870px;
+    height: 450px;
+    margin-right: 70px;
+    margin-left: 250px;
+}
+
+.container-photo{
+    display: flex;
+    flex-direction: line;
+    margin-bottom: 70px;
+    margin-right: 10px;
+    margin-top: 15px;
+    margin-left: 260px;
+}
+
+.img-photo{
+    width: 90px;
+    height: 90px;
+    margin-right: 20px;
+}
+
+.container-sort{
+    display: flex;
+    flex-direction: line;
+    margin-left: 260px;
+}
+
+.container-star{
+    display: flex;
+    flex-direction: line;
+}
+
+p25{
+    margin-right: 30px;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+p26{
+    margin-right: 3px;
+    font-size: 16px;
+    margin-bottom: 20px;
+    color: #77878F;
+}
+
+.img-star{
+    width: 14px;
+    height: 14px;
+    margin-top: 2px;
+}
+
+
+.container-button-otziv{
+    display: flex;
+    flex-direction: column;
+    margin-top: 1px;
+    margin-left: 260px;
+    height: 364px;
+    width: 860px;
+    bottom: 520px;
+}
+
+.container-button-in-otziv{
+    display: flex;
+    flex-direction: line;
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
+p27{
+    margin-bottom: -3px;
+    margin-top: 0px;
+    margin-left: 25px;
+}
+
+button27{
+    color:#000000;
+    display: flex;
+    flex-direction: column;
+    border: 2.5px solid #F2F4F5;;
+    border-radius: 12px;
+    text-size-adjust: 14px;
+    letter-spacing: 1.2%;
+    margin-top: 10px;
+    margin-right: 15px;
+}
+
+p28{
+    margin-top: 20px;
+    margin-left: 380px;
+    margin-right: 15px;
+}
+
+.img-gr-star{
+    width: 16px;
+    height: 16px;
+    margin-left: 3px;
+    margin-top: 17px;
+    margin-right: 3px;
 }
