--- a/css/style-parol.css
+++ b/css/style-parol.css
@@ -520,8 +520,11 @@ body {
         padding-left: 150px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 150px;
+    .header-line3-new {
+        margin: 10px 40px 10px 150px;
+    }
+    .category {
+        margin-left: 150px;
     }
     
     .header-line3-a1 {
@@ -571,8 +574,17 @@ body {
         padding-left: 100px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 100px;
+    .header-line3-new {
+        margin: 10px 40px 10px 100px;
+        width: 140px;
+    }
+    .header-line3-p {
+        font-size: 12px;
+        margin-left: 2px;
+        margin-top: 1px;
+    }
+    .category {
+        margin-left: 100px;
     }
     
     .bottom1 {
@@ -601,8 +613,11 @@ body {
         padding-left: 80px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 80px;
+    .header-line3-new {
+        margin: 10px 40px 10px 80px;
+    }
+    .category {
+        margin-left: 80px;
     }
     
     .bottom1 {
@@ -632,8 +647,11 @@ body {
         padding-left: 55px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 55px;
+    .header-line3-new {
+        margin: 10px 40px 10px 55px;
+    }
+    .category {
+        margin-left: 55px;
     }
     
     .bottom1 {
@@ -675,8 +693,11 @@ body {
         padding-left: 50px;
     }
 
-    .header-line3-select {
-        margin: 10px 10px 10px 50px;
+    .header-line3-new {
+        margin: 10px 40px 10px 50px;
+    }
+    .category {
+        margin-left: 50px;
     }
 
     .bottom1 {
@@ -691,3 +712,4 @@ body {
         margin-left: 150px;
     }
 } 
+
