--- a/css/style-basket.css
+++ b/css/style-basket.css
@@ -524,6 +524,20 @@ body {
 .promokod-p {
     color: rgb(214, 109, 109);
 }
+
+.tovara-net {
+    height: 100px;
+    background-color: #F2F4F5;
+    display: none;
+}
+
+.tovara-net-p {
+    color: #5F6C72;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 40px;
+    
+}
 .bottom {
     display: flex;
     min-height: 400px;
